# Basic_Data_Signature_Acquisition_Protocol

./: CMakeLists.txt  index.html  spare_shit.hpp
include/: CMakeLists.txt  proto_parsing.hpp  proto_parsing2.hpp  send.cpp
js/: convert.js  convert_from_string.js  package-lock.json  schema.json
proto_descriptors/: my_message_descriptor.pb
proto_sources/: my_message.pb.cc  my_message.pb.h
